css/main.css
:root {
    /* Settings */
    --spacing: 15px;
    --font-size: 25px;
    /* Normal Colors */
    --background-color:#F1FFE7;
    --alt-background-color: #C2E7DA;
    --font-color: #1A1B41;
    --alt-font-color: #000000;
    --border-color: #6290C3;
    /* Dark Mode Colors */
    --dark-background-color: #212121;
    --dark-alt-background-color: #181818;
    --dark-font-color: #BAFF29;
    --dark-alt-font-color: #6290C3;
    --dark-border-color: #6290C3;
}

html, body {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
    text-rendering: optimizeLegibility;
}

body {
    display: flex;
    flex-direction: column;
    font-size: 62.5%;
    font-family: 'PT Sans', sans-serif;
}

header {
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: 25px 1fr 1000px;
    font-size: var(--font-size);
    padding: var(--spacing);
    border-bottom: 1px solid var(--border-color);
    color: var(--alt-font-color);
    background-color: var(--alt-background-color);
    font-family: 'Merriweather', serif;

}
h1 {
    text-align: center;
    text-decoration: underline;
    word-spacing: 10px;
    letter-spacing: 3px;
}
a img #logo {
    position: relative;
}
header a {
    color: var(--alt-font-color);
    transition-duration: 0.4s;
}
header a:hover {
    color: var(--background-color);
}

header nav {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: auto;
    
}

header nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

header nav ul li {
    display: inline-block;
    padding: 0px;
    margin-right: 25px;
}
button {
    background-color: var(--background-color);
    border: 2px solid var(--font-color);
    transition-duration: 0.4s;
    border-radius: 4px;
    padding: 5px 50px;
}
button:hover {
    background-color: var(--font-color);
    border: 2px solid var(--alt-font-color);
}
.foot_button {
    padding: 3px 15px;
    font-size: 18px;
}
h2 {
    text-decoration: underline;
}
#index {
    font-size: var(--font-size);
    padding: var(--spacing);
    color: var(--font-color);
    background-color: var(--background-color);
    font-family: 'PT Sans', sans-serif;
    display: grid;
    grid-template-columns: 225px 1fr 225px;
    grid-template-rows: auto;
    grid-gap: 50px;
    padding: 30px;
}
#many img {
    width: 100%;
    max-height: 500px;
    border: 2px solid black;
}
#four {
    border: 2px solid black;
    height: 90%;
    grid-row: 1 / 3;
    grid-column: 1;
    padding: 30px;
    text-align: center;
}
#four p {
    text-indent: 0px;
    line-height: 50px;
    font-size: 19px;
    margin-top: 60px;
}
#many {
    grid-column: 2 / 4;
}
#one {
    grid-column: 2 / 4;
    text-align: center;
    margin: 60px;
    padding: 50px;
}
#relax {
    grid-column: 1 / 3;
}
#relax img {
    max-height: 800px;
    width: 100%;
}
#five {
    border: 2px solid black;
    height: 90%;
    grid-column: 3;
    grid-row: 3 / 5;
    padding: 30px;
    text-align: center;
}
#five p {
    text-indent: 0px;
    line-height: 50px;
    font-size: 19px;
    margin-top: 80px;
}
#two {
    grid-column: 1 / 3;
    grid-row: 4;
    margin-left: 30px;
    padding: 50px;
}
p {
    text-indent: 25px;
    line-height: 50px;
}
#p {
    text-align: center;
    text-decoration: underline;
    font-size: 30px;
}
#sun {
    grid-column: 1;
}
#sun img {
    border: 2px solid black;
}
#three {
    grid-column: 2 / 4;
    margin-left: 300px;
}
footer {
    display: grid;
    grid-template-rows: auto;
    grid-template-columns: auto 1fr auto;
    font-size: var(--font-size);
    border-top: 1px solid var(--border-color);
    padding: var(--spacing);
    color: var(--alt-font-color);
    background-color: var(--alt-background-color);
    font-family: 'Merriweather', serif;
}

footer a {
    color: var(--alt-font-color);
    transition-duration: 0.4s;
}
footer a:hover {
    color: var(--background-color);
}

footer #legal {
    grid-row: 1;
    grid-column: 1;
    display: flex;
    align-items: center;
    font-size: 18px;
}

footer nav {
    grid-row: 1;
    grid-column: 2;
    display: flex;
    align-items: center;
    margin-left: auto;
}

footer nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

footer nav ul li {
    display: inline-block;
    padding: 7.5px;
    margin-right: 7.5px;
}

footer #dark-mode {
    grid-row: 1;
    grid-column: 3;
}

footer #dark-mode .icon {
    position: relative;
    display: inline-block;
    z-index: 100;
    pointer-events: none;
}

footer #dark-mode .icon svg path {
    fill: var(--background-color);
}

footer #dark-mode #sun-icon svg {
    transform: scale(0.9);
    position: absolute;
    top: -32px;
    left: 15px;
}

footer #dark-mode #moon-icon svg {
    transform: scale(0.85);
    position: absolute;
    top: -32px;
    right: 15px;
}

footer #dark-mode #tgl-wrapper {
    display: inline-block;
}

footer #dark-mode #tgl-wrapper .tgl {
    display: none;
}

footer #dark-mode #tgl-wrapper .tgl, .tgl:after, .tgl:before, .tgl *, .tgl *:after, .tgl *:before, .tgl + .tgl-btn {
    box-sizing: border-box;
}

footer #dark-mode #tgl-wrapper .tgl::-moz-selection, .tgl:after::-moz-selection, .tgl:before::-moz-selection, .tgl *::-moz-selection, .tgl *:after::-moz-selection, .tgl *:before::-moz-selection, .tgl + .tgl-btn::-moz-selection {
    background: none;
}

footer #dark-mode #tgl-wrapper .tgl::selection, .tgl:after::selection, .tgl:before::selection, .tgl *::selection, .tgl *:after::selection, .tgl *:before::selection, .tgl + .tgl-btn::selection {
    background: none;
}

footer #dark-mode #tgl-wrapper .tgl + .tgl-btn {
    outline: 0;
    display: block;
    width: 80px;
    height: 40px;
    position: relative;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: var(--background-color);
    border: 1px solid var(--border-color);
    border-radius: 30px;
    padding: 3px;
    transition: all 0.4s ease;
}

footer #dark-mode #tgl-wrapper .tgl + .tgl-btn:after, .tgl + .tgl-btn:before {
    position: relative;
    display: block;
    content: "";
    width: 50%;
    height: 100%;
}

footer #dark-mode #tgl-wrapper .tgl + .tgl-btn:after {
    left: 0;
    border-radius: 50%;
    background-color: var(--border-color);
    transition: all 0.2s ease;
}

footer #dark-mode #tgl-wrapper .tgl + .tgl-btn:before {
    display: none;
    transition: all 0.2s ease;
}

footer #dark-mode #tgl-wrapper .tgl:checked + .tgl-btn:after {
    left: 50%;
    transition: all 0.2s ease;
}

/*===========================================*\
  APPLY DARK MODE COLORS WHEN DARK MODE IS ON 
\*===========================================*/

body.dark-mode header {
    border-bottom: 1px solid var(--dark-border-color);
    color: var(--dark-alt-font-color);
    background-color: var(--dark-alt-background-color);
}

body.dark-mode header a {
    color: var(--dark-alt-font-color);
}

body.dark-mode main {
    color: var(--dark-font-color);
    background-color: var(--dark-background-color);
}

body.dark-mode footer {
    border-top: 1px solid var(--dark-border-color);
    color: var(--dark-alt-font-color);
    background-color: var(--dark-alt-background-color);
}

body.dark-mode footer a {
    color: var(--dark-alt-font-color);
}

body.dark-mode footer #dark-mode .icon svg path {
    fill: var(--dark-background-color);
}

body.dark-mode footer #dark-mode #tgl-wrapper .tgl + .tgl-btn {
    background-color: var(--dark-background-color);
    border: 1px solid var(--dark-border-color);
}

body.dark-mode footer #dark-mode #tgl-wrapper .tgl + .tgl-btn:after {
    background-color: var(--dark-border-color);
}

